--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3157691752');
       });
     }
   </script>
